--- a/CorujaPresentation/Views/Home/Equipe.cshtml
+++ b/CorujaPresentation/Views/Home/Equipe.cshtml
@@ -85,7 +85,7 @@
                 <button type="button" class="btn btn-info btn-team col-centered" data-toggle="modal" data-target="#myModalCK">
                     <p>
                         <span class="team-name">Rodolfo Hing</span><br>
-                        <span class="team-position">Equipe Técnica</span>
+                        <span class="team-position">Administração</span>
                     </p>
                 </button>
                 <!-- Modal -->
@@ -98,7 +98,7 @@
                                 <h4 class="modal-title">Rodolfo Hing</h4>
                             </div>
                             <div class="modal-body">
-                                <p>?</p>
+                                <p>Administrador de Empresas formado pela FGV e Mestrado em Negócios Sociais pela Knowmads de Amsterdam. Trabalhou em planejamento estratégico e finanças pelo Banco Pátria Investimentos e Livraria Cultura.</p>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
@@ -274,7 +274,7 @@
                 <button type="button" class="btn btn-info btn-team col-centered" data-toggle="modal" data-target="#myModalLM">
                     <p>
                         <span class="team-name">Tomás da Silva Rangel</span><br>
-                        <span class="team-position">Equipe Técnica</span>
+                        <span class="team-position">Tecnologia</span>
                     </p>
                 </button>
                 <!-- Modal -->
@@ -304,7 +304,7 @@
                 <button type="button" class="btn btn-info btn-team col-centered" data-toggle="modal" data-target="#myModalCT">
                     <p>
                         <span class="team-name">Christian Takagi</span><br>
-                        <span class="team-position">Equipe Técnica</span>
+                        <span class="team-position">Tecnologia</span>
                     </p>
                 </button>
                 <!-- Modal -->
