--- a/CorujaPresentation/Views/Conta/Login.cshtml
+++ b/CorujaPresentation/Views/Conta/Login.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Log in";
 }
 
-<section id="Cadastro" class="section section-gray">
+<section id="LoginSection" class="section section-gray">
 
     <div class="container">
 
@@ -30,23 +30,32 @@
                             {
                                 <fieldset>
 
-                                    <div class="form-group input-group">
+                                    <div class="form-group input-group" style="margin-bottom:0">
                                         <span class="input-group-addon">
                                             <i class="glyphicon glyphicon-envelope">
                                             </i>
                                         </span>
                                         @Html.PasswordFor(m => m.Email, new { @class = "form-control" , @placeholder = "Email" })
+                                       
+                                    </div>
+                                    
+                                    <div class="form-group">
                                         @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                                     </div>
-
-                                    <div class="form-group input-group">
+                                        
+                                    <div class="form-group input-group" style="margin-bottom:0">
                                         <span class="input-group-addon">
                                             <i class="glyphicon glyphicon-lock">
                                             </i>
                                         </span>
                                         @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Senha" })
+                                        
+                                    </div>
+
+                                    <div class="form-group">
                                         @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                                     </div>
+
 
                                     <div class="form-group">
 
