--- a/CorujaPresentation/Views/Home/FAQ.cshtml
+++ b/CorujaPresentation/Views/Home/FAQ.cshtml
@@ -18,27 +18,29 @@
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a href="#collapseOne" data-parent="#accordion" data-toggle="collapse" class="accordion-toggle collapsed">
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit?
+                                        O que faz a Coruja Educação?
                                     </a>
                                 </h4>
                             </div>
                             <div class="panel-collapse collapse" id="collapseOne" style="height: 0px;">
                                 <div class="panel-body">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                                </div>
+                                    A Coruja Educação tem um programa completo de diferenciação da instrução, que monitora o progresso dos alunos e oferece atividades adequadas ao nível de habilidade de cada um.
+                               </div>
                             </div>
                         </div>
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a href="#collapseTwo" data-parent="#accordion" data-toggle="collapse" class="accordion-toggle collapsed">
-                                        Curabitur eget leo at velit imperdiet varius. In eu ipsum vitae velit congue iaculis vitae at risus?
+                                        O que é o Programa de Diferenciação da Instrução?
                                     </a>
                                 </h4>
                             </div>
                             <div class="panel-collapse collapse" id="collapseTwo" style="height: 0px;">
                                 <div class="panel-body">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                    Cada criança aprende de modo particular: através de estímulos diversos, utilizando diferentes pontos de apoio para progredir, cada um no seu próprio ritmo. Muitas vezes, em uma mesma sala de aula, os alunos encontram-se em diferentes estágios do processo de aprendizagem. O grande desafio do professor e da escola é acompanhar e dar conta das diferenças entre os alunos e garantir que todos possam aprender e evoluir.
+
+                                    Nós, da Coruja Educação, acreditamos que um desafio bem colocado, no momento certo, funciona como um gatilho para a aprendizagem: provoca engajamento, eleva a auto-estima, incentiva a colaboração e a comunicação. O programa de diferenciação da instrução baseia-se na abordagem diversificada: oferecer estímulos diferentes para os diferentes perfis e níveis de alunos.
                                 </div>
                             </div>
                         </div>
@@ -46,13 +48,13 @@
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a href="#collapseThree" data-parent="#accordion" data-toggle="collapse" class="accordion-toggle collapsed">
-                                        Aenean consequat lorem ut felis ullamcorper?
+                                        Que produtos a Coruja tem para escolas?
                                     </a>
                                 </h4>
                             </div>
                             <div class="panel-collapse collapse" id="collapseThree">
                                 <div class="panel-body">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                    Temos uma avaliação adaptativa, que monitora as habilidades e dificuldades de cada aluno; um material completo de instrução, que contém atividades e desafios adaptados às necessidades de cada perfil; um programa de formação de Diferenciação da Instrução para professores e gestores; um programa de formação de habilidades socioemocionais para professores, gestores e funcionários; e consultoria em Diferenciação da Instrução para educadores e alunos. 
                                 </div>
                             </div>
                         </div>
@@ -60,17 +62,118 @@
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a href="#collapseFour" data-parent="#accordion" data-toggle="collapse" class="accordion-toggle collapsed">
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit?
+                                        Como é feita a avaliação das turmas?
                                     </a>
                                 </h4>
                             </div>
                             <div class="panel-collapse collapse" id="collapseFour">
                                 <div class="panel-body">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                    A avaliação é realizada no computador e cobre os eixos fundamentais da Língua Portuguesa (escuta, escrita alfabética, leitura e compreensão, produção de texto) e da Matemática (números, operações, espaço e forma, grandezas e tratamento da informação). Dura aproximadamente 60 minutos e pode ser aplicada de duas a três vezes por ano.
+
+                                    Durante a avaliação, de acordo com o desempenho de cada criança, o sistema seleciona as questões mais apropriadas, ou seja, aquela que oferecem um desafio proporcional às habilidades que ela possui. A partir dos resultados, o sistema gera relatórios que refletem o estágio preciso em que cada aluno se encontra em cada eixo da Língua Portuguesa e da Matemática.
                                 </div>
                             </div>
                         </div>
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a href="#collapseFive" data-parent="#accordion" data-toggle="collapse" class="accordion-toggle collapsed">
+                                        De que forma o professor é envolvido? Há algum treinamento?
+                                    </a>
+                                </h4>
+                            </div>
+                            <div class="panel-collapse collapse" id="collapseFive">
+                                <div class="panel-body">
+                                    O papel do professor é essencial durante todo o processo. Ele recebe treinamento e suporte da equipe da Coruja Educação para interpretar os resultados da avaliação e aplicar o material de diferenciação da instrução em sala de aula.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a href="#collapseSix" data-parent="#accordion" data-toggle="collapse" class="accordion-toggle collapsed">
+                                        Como é feito o atendimento ao aluno depois de identificadas suas dificuldades?
+                                    </a>
+                                </h4>
+                            </div>
+                            <div class="panel-collapse collapse" id="collapseSix">
+                                <div class="panel-body">
+                                    Cada aluno é classificado, segundo um sistema de cores, nos quatro eixos da Língua Portuguesa e da Matemática. Em cada um dos eixos, o aluno pode estar “abaixo da expectativa”, “próximo à expectativa”, “na expectativa” ou “acima da expectativa”.
 
+                                    Com os resultados em mãos, o professor (ou profissional) aplica a(s) atividade(s) mais adequada(s) para estimular cada aluno ou grupo de alunos na medida da sua necessidade. Por exemplo, a partir de um problema de matemática, alguns alunos podem trabalhar com enunciados, enquanto outros operam contas numéricas, e um terceiro grupo quantifica conjuntos. Todos aprendem, cada um na medida da sua habilidade.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a href="#collapseSeven" data-parent="#accordion" data-toggle="collapse" class="accordion-toggle collapsed">
+                                        Como o professor aplica o material da Coruja?
+                                    </a>
+                                </h4>
+                            </div>
+                            <div class="panel-collapse collapse" id="collapseSeven">
+                                <div class="panel-body">
+                                    O material da Coruja Educação pode ser aplicado em sala de aula, em grupos ou individualmente. Pode também ser utilizado como lição de casa. Outra aplicação bastante útil é para as aulas de reforço ou recuperação, a fim de diminuir a defasagem desses alunos em relação ao grupo.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a href="#collapseEight" data-parent="#accordion" data-toggle="collapse" class="accordion-toggle collapsed">
+                                        Quais níveis escolares podem utilizar os produtos da Coruja?
+                                    </a>
+                                </h4>
+                            </div>
+                            <div class="panel-collapse collapse" id="collapseEight">
+                                <div class="panel-body">
+                                    Atualmente, a Coruja oferece o conteúdo relativo ao ciclo de alfabetização, do 1o. ao 3o. anos. Em breve disponibilizaremos também os conteúdos de 4o. e 5o. anos, completando assim o Ensino Fundamental I.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a href="#collapseNine" data-parent="#accordion" data-toggle="collapse" class="accordion-toggle collapsed">
+                                        A quem se aplica o PDI?
+                                    </a>
+                                </h4>
+                            </div>
+                            <div class="panel-collapse collapse" id="collapseNine">
+                                <div class="panel-body">
+                                    O PDI se aplica a todos os alunos do ciclo de alfabetização. Oferece desafios adequados às necessidades de cada perfil e pode beneficiar tanto os alunos mais defasados quanto os mais adiantados.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a href="#collapseTen" data-parent="#accordion" data-toggle="collapse" class="accordion-toggle collapsed">
+                                        Como a escola pode utilizá-lo?
+                                    </a>
+                                </h4>
+                            </div>
+                            <div class="panel-collapse collapse" id="collapseTen">
+                                <div class="panel-body">
+                                    A escola pode utilizar o PDI de várias maneiras, pois essa abordagem funciona para situações comuns que caracterizam o processo de aprendizagem. Pode-se utilizar o PDI em sala de aula, dividindo os alunos em grupos e aplicando um estímulo para cada um deles. Pode-se, também, utilizar a abordagem individual (em sala de aula ou como lição de casa). É possível, ainda, trabalhar no contra-turno, com os alunos mais defasados em determinado eixo ou competência. Ou, através dos resultados das avaliações, eleger competências prioritárias a serem desenvolvidas por toda a classe e/ou toda a escola.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a href="#collapseEleven" data-parent="#accordion" data-toggle="collapse" class="accordion-toggle collapsed">
+                                        A Coruja atua com escolas públicas?
+                                    </a>
+                                </h4>
+                            </div>
+                            <div class="panel-collapse collapse" id="collapseEleven">
+                                <div class="panel-body">
+                                    Sim. O programa da Coruja Educação aplica-se a escolas públicas e particulares.
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
