--- a/CorujaPresentation/Content/site.css
+++ b/CorujaPresentation/Content/site.css
@@ -1,5 +1,4 @@
 ﻿
-
 /* ==========================================================================
    1. General
 ========================================================================== */
@@ -1392,6 +1391,46 @@ button.btn-search {
     margin-top:24px;
     margin-left:95px;
 
+}
+
+/*DROP DOWN STYLE DIDNT WORK!!*/
+#Graduation {
+  height: 30px;
+  padding: 5px 10px;
+  font-size: 12px;
+  line-height: 1.5;
+  display: block;
+  width: 100%;
+
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+  -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+       -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+          transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+#Graduation:focus {
+  border-color: #66afe9;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
+          box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
+}
+
+    #Graduation:focus {
+            background-color:#feffef;
+    }
+   
+
+ #BirthDate    {
+    height: 30px;
+    padding: 5px 10px;
+    font-size: 12px;
+    line-height: 1.5;
+    border-radius: 3px;
 }
 
 /*#endregion */
